Store log, has_errors and force overwrite run
